--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 		</div>
 	</nav>
 
-	<header id="fh5co-header" class="fh5co-cover background-img" role="banner" data-stellar-background-ratio="0.5">
+	<header id="fh5co-header" class="fh5co-cover" style="background-image:url(img/engagement2.jpg); role="banner" data-stellar-background-ratio="0.5">
 		<div class="overlay"></div>
 		<div class="container">
 			<div class="row">
