--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 		</div>
 	</nav>
 
-	<header id="fh5co-header" class="fh5co-cover" style="background-image:url(img/_EJP7769.jpg)" role="banner" data-stellar-background-ratio="0.5">
+	<header id="fh5co-header" class="fh5co-cover" style="background-image:url(img/pre1.jpeg)" role="banner" data-stellar-background-ratio="0.5">
 		<div class="overlay"></div>
 		<div class="container">
 			<div class="row">
@@ -122,8 +122,6 @@
 							<p style="margin-top: 320px; font-size: 22px; color: #cacaca"><b>You Are Invited!</b></p>
 							<p style="margin-top: -20px; font-size: 15px; color: #cacaca">The Wedding Celebration of</p>
 							<h1 style="margin-top: -20px">Amy &amp; Elvan</h1>
-<!--							<h2>We Are Getting Married</h2>-->
-<!--							<div class="simply-countdown simply-countdown-one"></div>-->
 							<p style="margin-top: 20px"><a id="iconPlay" class="btn btn-default btn-sm">Open Invitation</a></p>
 						</div>
 					</div>
@@ -136,29 +134,27 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading animate-box">
-					<h2>Hello!</h2>
-					<h3>February 12th, 2022 Rejang Lebong, Curup</h3>
-					<p>We invited you to celebrate our wedding</p>
+					<p>“Dan di antara tanda-tanda (kebesaran)-Nya ialah Dia menciptakan pasangan-pasangan untukmu dari jenismu sendiri, agar kamu cenderung dan merasa tenteram kepadanya dan Dia menjadikan di antara kamu rasa kasih dan sayang. Sungguh, pada demikian itu benar-benar terdapat tanda-tanda (kebesaran Allah) bagi kaum yang berfikir.“<br/><b>( QS. Ar- Rum 21 )</b></p>
 				</div>
 			</div>
 			<div class="couple-wrap animate-box">
 				<div class="couple-half">
 					<div class="groom">
-						<img src="images/groom.jpg" alt="groom" class="img-responsive">
+						<img src="img/pre3.jpeg" alt="groom" class="img-responsive">
 					</div>
 					<div class="desc-groom">
-						<h3>Joefrey Mahusay</h3>
-						<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove</p>
+						<h3>Elvan Diano</h3>
+						<p>Putra ke tiga dari<br/>Bapak Edy Effendi & Ibu Elly Maini</p>
 					</div>
 				</div>
 				<p class="heart text-center"><i class="icon-heart2"></i></p>
 				<div class="couple-half">
 					<div class="bride">
-						<img src="images/bride.jpg" alt="groom" class="img-responsive">
+						<img src="img/pre12.jpeg" alt="groom" class="img-responsive">
 					</div>
 					<div class="desc-bride">
-						<h3>Sheila Mahusay</h3>
-						<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove</p>
+						<h3>Arum Puspa Utami</h3>
+						<p>Putri pertama dari<br/>Bapak Tri Sukarsono & Ibu Kustindarti (Almh)</p>
 					</div>
 				</div>
 			</div>
@@ -180,32 +176,30 @@
 						<div class="col-md-10 col-md-offset-1">
 							<div class="col-md-6 col-sm-6 text-center">
 								<div class="event-wrap animate-box">
-									<h3>Main Ceremony</h3>
+									<h3>AKAD</h3>
 									<div class="event-col">
 										<i class="icon-clock"></i>
-										<span>4:00 PM</span>
-										<span>6:00 PM</span>
+										<span>8:00 AM - 11:00 AM</span>
 									</div>
 									<div class="event-col">
 										<i class="icon-calendar"></i>
-										<span>Monday 28</span>
-										<span>November, 2016</span>
+										<span>Sabtu</span>
+										<span>12 02 2022</span>
 									</div>
 									<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
 								</div>
 							</div>
 							<div class="col-md-6 col-sm-6 text-center">
 								<div class="event-wrap animate-box">
-									<h3>Wedding Party</h3>
+									<h3>RESEPSI</h3>
 									<div class="event-col">
 										<i class="icon-clock"></i>
-										<span>7:00 PM</span>
-										<span>12:00 AM</span>
+										<span>11:00 AM - 03:00 PM</span>
 									</div>
 									<div class="event-col">
 										<i class="icon-calendar"></i>
-										<span>Monday 28</span>
-										<span>November, 2016</span>
+										<span>Sabtu</span>
+										<span>12 02 2022</span>
 									</div>
 									<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
 								</div>
@@ -270,6 +264,26 @@
 			</div>
 		</div>
 	</div>
+
+		<div id="fh5co-counter" class="fh5co-bg fh5co-counter" style="background-image:url(images/img_bg_5.jpg);">
+			<div class="overlay"></div>
+			<div class="container">
+				<div class="row">
+					<div class="text-center fh5co-heading animate-box" style="margin-top: 50px">
+						<h2>Save The Date</h2>
+					</div>
+					<div class="display-t" style="margin-top: -50px">
+						<div class="display-tc">
+							<div class="col-md-12 col-sm-12 animate-box">
+								<div class="feature-center">
+									<div class="simply-countdown simply-countdown-one"></div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
 
 	<div id="fh5co-gallery" class="fh5co-section-gray">
 		<div class="container">
@@ -367,201 +381,92 @@
 		</div>
 	</div>
 
-	<div id="fh5co-counter" class="fh5co-bg fh5co-counter" style="background-image:url(images/img_bg_5.jpg);">
-		<div class="overlay"></div>
-		<div class="container">
-			<div class="row">
-				<div class="display-t">
-					<div class="display-tc">
-						<div class="col-md-3 col-sm-6 animate-box">
-							<div class="feature-center">
-								<span class="icon">
-									<i class="icon-users"></i>
-								</span>
+<!--	<div id="fh5co-testimonial">-->
+<!--		<div class="container">-->
+<!--			<div class="row">-->
+<!--				<div class="row animate-box">-->
+<!--					<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">-->
+<!--						<span>Best Wishes</span>-->
+<!--						<h2>Friends Wishes</h2>-->
+<!--					</div>-->
+<!--				</div>-->
+<!--				<div class="row">-->
+<!--					<div class="col-md-12 animate-box">-->
+<!--						<div class="wrap-testimony">-->
+<!--							<div class="owl-carousel-fullwidth">-->
+<!--								<div class="item">-->
+<!--									<div class="testimony-slide active text-center">-->
+<!--										<figure>-->
+<!--											<img src="images/couple-1.jpg" alt="user">-->
+<!--										</figure>-->
+<!--										<span>John Doe, via <a href="#" class="twitter">Twitter</a></span>-->
+<!--										<blockquote>-->
+<!--											<p>"Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics"</p>-->
+<!--										</blockquote>-->
+<!--									</div>-->
+<!--								</div>-->
+<!--								<div class="item">-->
+<!--									<div class="testimony-slide active text-center">-->
+<!--										<figure>-->
+<!--											<img src="images/couple-2.jpg" alt="user">-->
+<!--										</figure>-->
+<!--										<span>John Doe, via <a href="#" class="twitter">Twitter</a></span>-->
+<!--										<blockquote>-->
+<!--											<p>"Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, at the coast of the Semantics, a large language ocean."</p>-->
+<!--										</blockquote>-->
+<!--									</div>-->
+<!--								</div>-->
+<!--								<div class="item">-->
+<!--									<div class="testimony-slide active text-center">-->
+<!--										<figure>-->
+<!--											<img src="images/couple-3.jpg" alt="user">-->
+<!--										</figure>-->
+<!--										<span>John Doe, via <a href="#" class="twitter">Twitter</a></span>-->
+<!--										<blockquote>-->
+<!--											<p>"Far far away, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean."</p>-->
+<!--										</blockquote>-->
+<!--									</div>-->
+<!--								</div>-->
+<!--							</div>-->
+<!--						</div>-->
+<!--					</div>-->
+<!--				</div>-->
+<!--			</div>-->
+<!--		</div>-->
+<!--	</div>-->
 
-								<span class="counter js-counter" data-from="0" data-to="500" data-speed="5000" data-refresh-interval="50">1</span>
-								<span class="counter-label">Estimated Guest</span>
-
-							</div>
-						</div>
-						<div class="col-md-3 col-sm-6 animate-box">
-							<div class="feature-center">
-								<span class="icon">
-									<i class="icon-user"></i>
-								</span>
-
-								<span class="counter js-counter" data-from="0" data-to="1000" data-speed="5000" data-refresh-interval="50">1</span>
-								<span class="counter-label">We Catter</span>
-							</div>
-						</div>
-						<div class="col-md-3 col-sm-6 animate-box">
-							<div class="feature-center">
-								<span class="icon">
-									<i class="icon-calendar"></i>
-								</span>
-								<span class="counter js-counter" data-from="0" data-to="402" data-speed="5000" data-refresh-interval="50">1</span>
-								<span class="counter-label">Events Done</span>
-							</div>
-						</div>
-						<div class="col-md-3 col-sm-6 animate-box">
-							<div class="feature-center">
-								<span class="icon">
-									<i class="icon-clock"></i>
-								</span>
-
-								<span class="counter js-counter" data-from="0" data-to="2345" data-speed="5000" data-refresh-interval="50">1</span>
-								<span class="counter-label">Hours Spent</span>
-
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
-
-	<div id="fh5co-testimonial">
-		<div class="container">
-			<div class="row">
-				<div class="row animate-box">
-					<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
-						<span>Best Wishes</span>
-						<h2>Friends Wishes</h2>
-					</div>
-				</div>
-				<div class="row">
-					<div class="col-md-12 animate-box">
-						<div class="wrap-testimony">
-							<div class="owl-carousel-fullwidth">
-								<div class="item">
-									<div class="testimony-slide active text-center">
-										<figure>
-											<img src="images/couple-1.jpg" alt="user">
-										</figure>
-										<span>John Doe, via <a href="#" class="twitter">Twitter</a></span>
-										<blockquote>
-											<p>"Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics"</p>
-										</blockquote>
-									</div>
-								</div>
-								<div class="item">
-									<div class="testimony-slide active text-center">
-										<figure>
-											<img src="images/couple-2.jpg" alt="user">
-										</figure>
-										<span>John Doe, via <a href="#" class="twitter">Twitter</a></span>
-										<blockquote>
-											<p>"Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, at the coast of the Semantics, a large language ocean."</p>
-										</blockquote>
-									</div>
-								</div>
-								<div class="item">
-									<div class="testimony-slide active text-center">
-										<figure>
-											<img src="images/couple-3.jpg" alt="user">
-										</figure>
-										<span>John Doe, via <a href="#" class="twitter">Twitter</a></span>
-										<blockquote>
-											<p>"Far far away, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean."</p>
-										</blockquote>
-									</div>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
-
-	<div id="fh5co-services" class="fh5co-section-gray">
-		<div class="container">
-
-			<div class="row animate-box">
-				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
-					<h2>We Offer Services</h2>
-					<p>Dignissimos asperiores vitae velit veniam totam fuga molestias accusamus alias autem provident. Odit ab aliquam dolor eius.</p>
-				</div>
-			</div>
-
-			<div class="row">
-				<div class="col-md-6">
-					<div class="feature-left animate-box" data-animate-effect="fadeInLeft">
-						<span class="icon">
-							<i class="icon-calendar"></i>
-						</span>
-						<div class="feature-copy">
-							<h3>We Organized Events</h3>
-							<p>Facilis ipsum reprehenderit nemo molestias. Aut cum mollitia reprehenderit. Eos cumque dicta adipisci architecto culpa amet.</p>
-						</div>
-					</div>
-
-					<div class="feature-left animate-box" data-animate-effect="fadeInLeft">
-						<span class="icon">
-							<i class="icon-image"></i>
-						</span>
-						<div class="feature-copy">
-							<h3>Photoshoot</h3>
-							<p>Facilis ipsum reprehenderit nemo molestias. Aut cum mollitia reprehenderit. Eos cumque dicta adipisci architecto culpa amet.</p>
-						</div>
-					</div>
-
-					<div class="feature-left animate-box" data-animate-effect="fadeInLeft">
-						<span class="icon">
-							<i class="icon-video"></i>
-						</span>
-						<div class="feature-copy">
-							<h3>Video Editing</h3>
-							<p>Facilis ipsum reprehenderit nemo molestias. Aut cum mollitia reprehenderit. Eos cumque dicta adipisci architecto culpa amet.</p>
-						</div>
-					</div>
-
-				</div>
-
-				<div class="col-md-6 animate-box">
-					<div class="fh5co-video fh5co-bg" style="background-image: url(images/img_bg_3.jpg); ">
-						<a href="https://vimeo.com/channels/staffpicks/93951774" class="popup-vimeo"><i class="icon-video2"></i></a>
-						<div class="overlay"></div>
-					</div>
-				</div>
-			</div>
-
-
-		</div>
-	</div>
-
-	<div id="fh5co-started" class="fh5co-bg" style="background-image:url(images/img_bg_4.jpg);">
-		<div class="overlay"></div>
-		<div class="container">
-			<div class="row animate-box">
-				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
-					<h2>Are You Attending?</h2>
-					<p>Please Fill-up the form to notify you that you're attending. Thanks.</p>
-				</div>
-			</div>
-			<div class="row animate-box">
-				<div class="col-md-10 col-md-offset-1">
-					<form class="form-inline">
-						<div class="col-md-4 col-sm-4">
-							<div class="form-group">
-								<label for="name" class="sr-only">Name</label>
-								<input type="name" class="form-control" id="name" placeholder="Name">
-							</div>
-						</div>
-						<div class="col-md-4 col-sm-4">
-							<div class="form-group">
-								<label for="email" class="sr-only">Email</label>
-								<input type="email" class="form-control" id="email" placeholder="Email">
-							</div>
-						</div>
-						<div class="col-md-4 col-sm-4">
-							<button type="submit" class="btn btn-default btn-block">I am Attending</button>
-						</div>
-					</form>
-				</div>
-			</div>
-		</div>
-	</div>
+<!--	<div id="fh5co-started" class="fh5co-bg" style="background-image:url(images/img_bg_4.jpg);">-->
+<!--		<div class="overlay"></div>-->
+<!--		<div class="container">-->
+<!--			<div class="row animate-box">-->
+<!--				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">-->
+<!--					<h2>Are You Attending?</h2>-->
+<!--					<p>Please Fill-up the form to notify you that you're attending. Thanks.</p>-->
+<!--				</div>-->
+<!--			</div>-->
+<!--			<div class="row animate-box">-->
+<!--				<div class="col-md-10 col-md-offset-1">-->
+<!--					<form class="form-inline">-->
+<!--						<div class="col-md-4 col-sm-4">-->
+<!--							<div class="form-group">-->
+<!--								<label for="name" class="sr-only">Name</label>-->
+<!--								<input type="name" class="form-control" id="name" placeholder="Name">-->
+<!--							</div>-->
+<!--						</div>-->
+<!--						<div class="col-md-4 col-sm-4">-->
+<!--							<div class="form-group">-->
+<!--								<label for="email" class="sr-only">Email</label>-->
+<!--								<input type="email" class="form-control" id="email" placeholder="Email">-->
+<!--							</div>-->
+<!--						</div>-->
+<!--						<div class="col-md-4 col-sm-4">-->
+<!--							<button type="submit" class="btn btn-default btn-block">I am Attending</button>-->
+<!--						</div>-->
+<!--					</form>-->
+<!--				</div>-->
+<!--			</div>-->
+<!--		</div>-->
+<!--	</div>-->
 
 	<footer id="fh5co-footer" role="contentinfo">
 		<div class="container">
