--- a/index.html
+++ b/index.html
@@ -475,7 +475,7 @@
 				<div class="col-md-12 text-center">
 					<p>
 						<small class="block">&copy; 2021 All Rights Reserved.</small>
-						<small class="block">Designed by <a href="http://freehtml5.co/" target="_blank">elvan diano</a></small>
+						<small class="block">Designed by <a href="https://www.instagram.com/elvandiano/" target="_blank">elvan diano</a></small>
 					</p>
 					<p>
 						<ul class="fh5co-social-icons">
