change the title

--- a/index.html
+++ b/index.html
@@ -11,25 +11,20 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link rel="shortcut icon" href="img/ring.ico"/>
-    <title>The Wedding of Elvan & Amy</title>
+    <title>The Wedding of Amy & Elvan</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Free HTML5 Template by FREEHTML5.CO"/>
     <meta name="keywords" content="free html5, free template, free bootstrap, html5, css3, mobile first, responsive"/>
     <meta name="author" content="FREEHTML5.CO"/>
 
     <!--
-      //////////////////////////////////////////////////////
+      /////////////////////////////////////////////////////
 
-      FREE HTML5 TEMPLATE
-      DESIGNED & DEVELOPED by FREEHTML5.CO
+      You Are Invited! The Wedding Celebration of Amy & Elvan
 
-      Website: 		http://freehtml5.co/
-      Email: 			info@freehtml5.co
-      Twitter: 		http://twitter.com/fh5co
-      Facebook: 		https://www.facebook.com/fh5co
 
-      //////////////////////////////////////////////////////
-       -->
+
+    -->
 
     <!-- Facebook and Twitter integration -->
     <meta property="og:title" content=""/>
@@ -143,21 +138,21 @@
                 <div class="couple-wrap animate-box">
                     <div class="couple-half">
                         <div class="groom">
-                            <img src="img/pre3.jpeg" alt="groom" class="img-responsive">
+                            <img src="img/pre12.jpeg" alt="groom" class="img-responsive">
                         </div>
                         <div class="desc-groom">
-                            <h3>Elvan Diano</h3>
-                            <p>Putra dari<br/>Bapak Edy Effendi<br/>& Ibu Elly Maini</p>
+                            <h3>Arum Puspa Utami</h3>
+                            <p>Putri dari<br/>Bapak Tri Sukarsono<br/>& Ibu Kustindarti (Almh)</p>
                         </div>
                     </div>
                     <p class="heart text-center"><i class="icon-heart2"></i></p>
                     <div class="couple-half">
                         <div class="bride">
-                            <img src="img/pre12.jpeg" alt="groom" class="img-responsive">
+                            <img src="img/pre3.jpeg" alt="groom" class="img-responsive">
                         </div>
                         <div class="desc-bride">
-                            <h3>Arum Puspa Utami</h3>
-                            <p>Putri dari<br/>Bapak Tri Sukarsono<br/>& Ibu Kustindarti (Almh)</p>
+                            <h3>Elvan Diano</h3>
+                            <p>Putra dari<br/>Bapak Edy Effendi<br/>& Ibu Elly Maini</p>
                         </div>
                     </div>
                 </div>
@@ -363,98 +358,80 @@
             </div>
         </div>
 
-    </div>
-
-    	<div id="fh5co-testimonial">
-    		<div class="container">
-    			<div class="row">
-    				<div class="row animate-box">
-    					<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
+        <div id="fh5co-testimonial">
+            <div class="container">
+                <div class="row">
+                    <div class="row animate-box">
+                        <div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
                             <span><a></a></span>
-    						<h2>Wedding Gift</h2>
+                            <h2>Wedding Gift</h2>
                             <p>Bagi keluarga, sahabat dan teman yang ingin mengirimkan hadiah, silakan mengirimkannya melalui tautan berikut:</p>
                             <!-- Button trigger modal -->
                             <a type="button" class="btn btn-sm" data-toggle="modal" data-target="#exampleModalCenter"><i class="icon-wallet"></i></a>
-    					</div>
-    				</div>
-<!--    				<div class="row">-->
-<!--    					<div class="col-md-12 animate-box">-->
-<!--    						<div class="wrap-testimony">-->
-<!--    							<div class="owl-carousel-fullwidth">-->
-<!--    								<div class="item">-->
-<!--    									<div class="testimony-slide active text-center">-->
-<!--    										<figure>-->
-<!--    											<img src="images/couple-1.jpg" alt="user">-->
-<!--    										</figure>-->
-<!--    										<span>John Doe, via <a href="#" class="twitter">Twitter</a></span>-->
-<!--    										<blockquote>-->
-<!--    											<p>"Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics"</p>-->
-<!--    										</blockquote>-->
-<!--    									</div>-->
-<!--    								</div>-->
-<!--    							</div>-->
-<!--    						</div>-->
-<!--    					</div>-->
-<!--    				</div>-->
-    			</div>
-    		</div>
-    	</div>
-
-    <!--	<div id="fh5co-started" class="fh5co-bg" style="background-image:url(images/img_bg_4.jpg);">-->
-    <!--		<div class="overlay"></div>-->
-    <!--		<div class="container">-->
-    <!--			<div class="row animate-box">-->
-    <!--				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">-->
-    <!--					<h2>Are You Attending?</h2>-->
-    <!--					<p>Please Fill-up the form to notify you that you're attending. Thanks.</p>-->
-    <!--				</div>-->
-    <!--			</div>-->
-    <!--			<div class="row animate-box">-->
-    <!--				<div class="col-md-10 col-md-offset-1">-->
-    <!--					<form class="form-inline">-->
-    <!--						<div class="col-md-4 col-sm-4">-->
-    <!--							<div class="form-group">-->
-    <!--								<label for="name" class="sr-only">Name</label>-->
-    <!--								<input type="name" class="form-control" id="name" placeholder="Name">-->
-    <!--							</div>-->
-    <!--						</div>-->
-    <!--						<div class="col-md-4 col-sm-4">-->
-    <!--							<div class="form-group">-->
-    <!--								<label for="email" class="sr-only">Email</label>-->
-    <!--								<input type="email" class="form-control" id="email" placeholder="Email">-->
-    <!--							</div>-->
-    <!--						</div>-->
-    <!--						<div class="col-md-4 col-sm-4">-->
-    <!--							<button type="submit" class="btn btn-default btn-block">I am Attending</button>-->
-    <!--						</div>-->
-    <!--					</form>-->
-    <!--				</div>-->
-    <!--			</div>-->
-    <!--		</div>-->
-    <!--	</div>-->
-
-    <footer id="fh5co-footer" role="contentinfo">
-        <div class="container">
-
-            <div class="row copyright">
-                <div class="col-md-12 text-center">
-                    <p>
-                        <small class="block">&copy; 2022 The Wedding Event</small>
-                        <small class="block">Designed by <a target="_blank">elvan diano</a></small>
-                    </p>
-                    <p>
-                    <ul class="fh5co-social-icons">
-                        <li><a href="https://www.instagram.com/elvandiano/"><i class="icon-instagram"></i></a></li>
-                        <li><a href="https://www.facebook.com/gmcelvan/"><i class="icon-facebook"></i></a></li>
-                        <li><a href="https://www.linkedin.com/in/elvan-diano-8b03638a/"><i
-                                class="icon-linkedin"></i></a></li>
-                    </ul>
-                    </p>
+                        </div>
+                    </div>
                 </div>
             </div>
-
         </div>
-    </footer>
+
+        <div id="fh5co-started" class="fh5co-bg" style="background-image:url(images/img_bg_4.jpg);">
+            <div class="overlay"></div>
+            <div class="container">
+                <div class="row animate-box">
+                    <div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
+                        <h2>Are You Attending?</h2>
+                        <p>Please Fill-up the form to notify you that you're attending. Thanks.</p>
+                    </div>
+                </div>
+                <div class="row animate-box">
+                    <div class="col-md-10 col-md-offset-1">
+                        <form class="form-inline">
+                            <div class="col-md-4 col-sm-4">
+                                <div class="form-group">
+                                    <label for="name" class="sr-only">Name</label>
+                                    <input type="name" class="form-control" id="name" placeholder="Name">
+                                </div>
+                            </div>
+                            <div class="col-md-4 col-sm-4">
+                                <div class="form-group">
+                                    <label for="email" class="sr-only">Email</label>
+                                    <input type="email" class="form-control" id="email" placeholder="Email">
+                                </div>
+                            </div>
+                            <div class="col-md-4 col-sm-4">
+                                <button type="submit" class="btn btn-default btn-block">I am Attending</button>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <footer id="fh5co-footer" role="contentinfo">
+            <div class="container">
+
+                <div class="row copyright">
+                    <div class="col-md-12 text-center">
+                        <p>
+                            <small class="block">&copy; 2022 The Wedding Event</small>
+                            <small class="block">Designed by <a target="_blank">elvan diano</a></small>
+                        </p>
+                        <p>
+                        <ul class="fh5co-social-icons">
+                            <li><a href="https://www.instagram.com/elvandiano/"><i class="icon-instagram"></i></a></li>
+                            <li><a href="https://www.facebook.com/gmcelvan/"><i class="icon-facebook"></i></a></li>
+                            <li><a href="https://www.linkedin.com/in/elvan-diano-8b03638a/"><i
+                                    class="icon-linkedin"></i></a></li>
+                        </ul>
+                        </p>
+                    </div>
+                </div>
+
+            </div>
+        </footer>
+
+    </div>
+
 </div>
 
 <div class="gototop js-top">
