--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@
 								<a href="img/pre11.jpeg" class="color-6"></a>
 							</li>
                             <li class="one-third animate-box" data-animate-effect="fadeIn"
-                                style="background-image: url(img/_EJP7769.jpg)">
+                                style="background-image: url(img/pre44.jpeg)">
                                 <a href="img/_EJP7769.jpg"></a>
                             </li>
                             <li class="one-third animate-box" data-animate-effect="fadeIn"
