--- a/index.html
+++ b/index.html
@@ -13,18 +13,9 @@
     <link rel="shortcut icon" href="img/ring.ico"/>
     <title>The Wedding of Amy & Elvan</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Free HTML5 Template by FREEHTML5.CO"/>
-    <meta name="keywords" content="free html5, free template, free bootstrap, html5, css3, mobile first, responsive"/>
-    <meta name="author" content="FREEHTML5.CO"/>
+    <meta name="description" content="You Are Invited! The Wedding Celebration of Amy & Elvan"/>
 
-    <!--
-      /////////////////////////////////////////////////////
-
-      You Are Invited! The Wedding Celebration of Amy & Elvan
-
-
-
-    -->
+    <!--You Are Invited! The Wedding Celebration of Amy & Elvan -->
 
     <!-- Facebook and Twitter integration -->
     <meta property="og:title" content=""/>
@@ -124,7 +115,7 @@
     </header>
 
     <div id="bodys" style="display: none">
-
+        <img src="img/pre4.jpeg" alt="groom" class="img-responsive"  style="display: none">
         <div id="fh5co-couple">
             <div class="container">
                 <div class="row">
@@ -479,7 +470,7 @@
    simplyCountdown(".simply-countdown-one", {
       year: 2022,
       month: 2,
-      day: 12,
+      day: 13,
       hours: 7,
       minutes: 0,
       seconds: 0,
