--- a/index.html
+++ b/index.html
@@ -93,9 +93,9 @@
                 </div>
             </div>
         </div>
-    </nav>
+    </nav>git
 
-    <header id="fh5co-header" class="fh5co-cover" style="background-image:url(img/pre1.jpeg); background-position: center; height: 815px" role="banner"
+    <header id="fh5co-header" class="fh5co-cover" style="background-image:url(img/pre1.jpeg); background-position: center; height: 755px" role="banner"
             data-stellar-background-ratio="0.5">
         <div class="overlay"></div>
         <div class="container">
