--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                 </div>
             </div>
         </div>
-    </nav>git
+    </nav>
 
     <header id="fh5co-header" class="fh5co-cover" style="background-image:url(img/pre1.jpeg); background-position: center; height: 755px" role="banner"
             data-stellar-background-ratio="0.5">
