--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
         </div>
     </nav>
 
-    <header id="fh5co-header" class="fh5co-cover" style="background-image:url(img/pre1.jpeg); background-position: center; height: 755px" role="banner"
+    <header id="fh5co-header" class="fh5co-cover" style="background-image:url(img/tesBack.jpeg); background-position: center; height: 975px" role="banner"
             data-stellar-background-ratio="0.5">
         <div class="overlay"></div>
         <div class="container">
@@ -103,7 +103,7 @@
                 <div class="col-md-8 col-md-offset-2 text-center">
                     <div class="display-t">
                         <div class="display-tc animate-box" data-animate-effect="fadeIn">
-                            <p style="margin-top: 500px; font-size: 22px; color: #cacaca"><b>You Are Invited!</b></p>
+                            <p style="margin-top: 650px; font-size: 22px; color: #cacaca"><b>You Are Invited!</b></p>
                             <p style="margin-top: -20px; font-size: 15px; color: #cacaca">The Wedding Celebration of</p>
                             <h1 style="margin-top: -20px">Amy &amp; Elvan</h1>
                             <p style="margin-top: 20px" onclick="do_change()"><a id="iconPlay" class="btn btn-sm">Open Invitation</a></p>
@@ -115,7 +115,24 @@
     </header>
 
     <div id="bodys" style="display: none">
-        <img src="img/pre4.jpeg" alt="groom" class="img-responsive fadeOutUp">
+        <div id="fh5co-header" class="fh5co-cover" style="background-image:url(img/pre1.jpeg); background-position: center; height: 755px" role="banner"
+                data-stellar-background-ratio="0.5">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-8 col-md-offset-2 text-center">
+                        <div class="display-t">
+                            <div class="display-tc animate-box" data-animate-effect="fadeIn">
+                                <p style="margin-top: 550px; font-size: 22px; color: #cacaca"><b>You Are Invited!</b></p>
+                                <p style="margin-top: -20px; font-size: 15px; color: #cacaca">The Wedding Celebration of</p>
+                                <h1 style="margin-top: -20px">Amy &amp; Elvan</h1>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+<!--        <img src="img/pre1.jpeg" alt="groom" class="img-responsive fadeOutUp">-->
         <div id="fh5co-couple">
             <div class="container">
                 <div class="row">
